--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.2.1
   http: ^1.2.2
+  intl: ^0.19.0
+  pedometer: ^4.0.2
+  permission_handler: ^11.3.1
+  sensors_plus: ^6.1.0
 
 dev_dependencies:
   flutter_test:
